--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agricultural-trade-engine",
+  "name": "initial",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.0",
@@ -26,8 +27,8 @@
     "expo-image-picker": "~16.1.3",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
-    "expo-location": "~18.1.5",
     "expo-localization": "~16.1.0",
+    "expo-location": "~18.1.5",
     "expo-router": "~5.0.2",
     "expo-splash-screen": "~0.30.6",
     "expo-status-bar": "~2.2.2",
@@ -51,5 +52,23 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
-  }
+  },
+  "description": "First version of the prototype",
+  "directories": {
+    "doc": "docs",
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mohithgowdak/agriculture_platform.git"
+  },
+  "keywords": [
+    "project4"
+  ],
+  "author": "mohith",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mohithgowdak/agriculture_platform/issues"
+  },
+  "homepage": "https://github.com/mohithgowdak/agriculture_platform#readme"
 }
